--- a/ledger/templates/api/entry_forms/transaction-form.html
+++ b/ledger/templates/api/entry_forms/transaction-form.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form
             method="post"
             {% if transaction %}
@@ -12,100 +12,67 @@
             hx-include="#transactions-filter-form"
             class="form-group form-sm"
         >
-            {% csrf_token %}
+        {% csrf_token %}
 
             <!-- Date Field -->
-            <div class="form-group">
-                <input type="date" name="{{ form.date.html_name }}" id="{{ form.date.id_for_label }}"
-                    class="form-control"
-                    value="{{ form.date.value|date:'Y-m-d' }}"
-                    placeholder="{{ form.date.label }}">
-                {% for error in form.date.errors %}
-                    <div class="alert alert-danger">{{ error }}</div>
-                {% endfor %}
-            </div>
+            <div class="form-row align-items-center">
+                <div class="col-md-2">
+                    <label for="{{ form.date.id_for_label }}" class="sr-only">{{ form.date.label }}</label>
+                    <input type="date" name="{{ form.date.html_name }}" id="{{ form.date.id_for_label }}" class="form-control mb-2" value="{{ form.date.value|date:'Y-m-d' }}" placeholder="{{ form.date.label }}">
+                </div>
 
-            <!-- Account Field -->
-            <div class="form-group">
-                <input
-                    class="form-control"
-                    list="accountOptions"
-                    name="account"
-                    id="id_account"
-                    value="{{ form.account_name }}"
-                >
-                    <datalist id="accountOptions">
-                        {% for value, text in form.account.field.choices %}
-                            <option value="{{ text }}">
-                        {% endfor %}
-                    </datalist>
-                </input>
-            </div>
+                <!-- Account Field -->
+                <div class="col-md-2">
+                    <label for="id_account" class="sr-only">Account</label>
+                    <input class="form-control mb-2" list="accountOptions" name="account" id="id_account" value="{{ form.account_name }}" placeholder="Account">
+                </div>
 
-            <!-- Amount Field -->
-            <div class="form-group">
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">$</span>
+                <!-- Amount Field -->
+                <div class="col-md-2">
+                    <div class="input-group mb-2">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">$</div>
+                        </div>
+                        <input type="text" name="{{ form.amount.html_name }}" id="{{ form.amount.id_for_label }}" class="form-control" value="{{ form.amount.value|default_if_none:'' }}" placeholder="{{ form.amount.label }}">
                     </div>
-                    <input type="text" name="{{ form.amount.html_name }}" id="{{ form.amount.id_for_label }}"
-                        class="form-control"
-                        value="{{ form.amount.value|default_if_none:'' }}"
-                        placeholder="{{ form.amount.label }}"
-                        autofocus
-                    >
                 </div>
-                {% for error in form.amount.errors %}
-                    <div class="alert alert-danger">{{ error }}</div>
-                {% endfor %}
             </div>
+            <div class="form-row align-items-center">
+                <!-- Description Field -->
+                <div class="col-md-4">
+                    <input type="text" name="{{ form.description.html_name }}" id="{{ form.description.id_for_label }}" class="form-control mb-2" value="{{ form.description.value|default_if_none:'' }}" placeholder="{{ form.description.label }}">
+                </div>
 
-            <!-- Description Field -->
-            <div class="form-group">
-                <input type="text" name="{{ form.description.html_name }}" id="{{ form.description.id_for_label }}"
-                    class="form-control"
-                    value="{{ form.description.value|default_if_none:'' }}"
-                    placeholder="{{ form.description.label }}">
-                {% for error in form.description.errors %}
-                    <div class="alert alert-danger">{{ error }}</div>
-                {% endfor %}
+                <!-- Suggested Account Field -->
+                <div class="col-md-2">
+                    <input class="form-control mb-2" list="suggestedAccountOptions" name="suggested_account" id="id_suggested_account" value="{{ form.suggested_account_name }}" placeholder="Suggested Account">
+                </div>
             </div>
-
-            <!-- Suggested Account Field -->
-            <div class="form-group">
-                <input
-                    class="form-control"
-                    list="suggestedAccountOptions"
-                    name="suggested_account"
-                    id="id_suggested_account"
-                    value="{{ form.suggested_account_name }}"
-                >
-                    <datalist id="suggestedAccountOptions">
-                        {% for value, text in form.suggested_account.field.choices %}
-                            <option value="{{ text }}">
+            <div class="form-row align-items-center">
+                <!-- Type Field (as Button Group) -->
+                <div class="col-auto">
+                    <div class="btn-group btn-group-toggle mb-2" role="group" aria-label="Transaction type" data-toggle="buttons">
+                        {% for value, label in form.type.field.choices %}
+                            <label class="btn btn-outline-primary {% if form.type.value == value %}active{% endif %}">
+                                <input type="radio" name="{{ form.type.html_name }}" id="id_type_{{ value }}" value="{{ value }}" {% if form.type.value == value %}checked{% endif %} autocomplete="off">
+                                {{ label }}
+                            </label>
                         {% endfor %}
-                    </datalist>
-                </input>
-            </div>
-
-            <!-- Type Field -->
-            <div class="form-group">
-                <!-- Button Group Styled Radio Buttons -->
-                <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                    {% for value, label in form.type.field.choices %}
-                        <label class="btn btn-outline-primary {% if form.type.value == value %}active{% endif %}">
-                            <input type="radio" name="{{ form.type.html_name }}" id="id_type_{{ value }}" value="{{ value }}" {% if form.type.value == value %}checked{% endif %} autocomplete="off">
-                            {{ label }}
-                        </label>
-                    {% endfor %}
+                    </div>
                 </div>
-                {% for error in form.type.errors %}
-                    <div class="alert alert-danger">{{ error }}</div>
-                {% endfor %}
             </div>
 
             <!-- Submit Button -->
-            <button type="submit" class="btn btn-primary">Save</button>
+            <div class="form-row">
+                <div class="col-auto">
+                    <button type="submit" class="btn btn-primary mb-2">Save</button>
+                </div>
+            </div>
         </form>
+    </div>
+    <div class="col-md-6">
+    {% if created_transaction %}
+        {% include 'api/components/transaction-success.html' %}
+    {% endif %}
     </div>
 </div>
