--- a/ledger/templates/api/filter_forms/transactions-filter-form.html
+++ b/ledger/templates/api/filter_forms/transactions-filter-form.html
@@ -1,7 +1,7 @@
 <form
     id="transactions-filter-form"
     method="get"
-    hx-get="{% url 'transactions-table' %}?return_form_type={{return_form_type}}"
+    hx-get="{{ get_url }}"
     hx-target="#table-and-form"
     hx-trigger="submit"
     class="mb-3 form-sm"
