Updated JEI form to work with new templates

--- a/ledger/templates/api/content/journal-entry-content.html
+++ b/ledger/templates/api/content/journal-entry-content.html
@@ -1,6 +1,6 @@
 {{ table }}
 {% include "api/components/clickable-row-script.html" %}
 {% include "api/components/transactions-scroll.html" %}
-<div id="journal-entry-item-form">
+<div id="form-div">
     {{ entry_form }}
 </div>
