Updated Linking page, still not exactly right on highlighting

--- a/ledger/templates/api/components/two-row-select-script.html
+++ b/ledger/templates/api/components/two-row-select-script.html
@@ -2,20 +2,20 @@
 $(document).ready(function(){
     $('.clickable-row').click(function() {
         var highlightedCount = $('.clickable-row.table-active').length;
-
         if ($(this).hasClass('table-active')) {
             $(this).removeClass('table-active');
+            console.log('has class')
             updateFormWithSelectedRows();
         } else {
             if (highlightedCount < 2) {
                 $(this).addClass('table-active');
+                console.log('has not class')
                 updateFormWithSelectedRows();
             }
         }
     });
 
     function updateFormWithSelectedRows() {
-
         var selectedRows = $('.clickable-row.table-active');
         var selectedIds = selectedRows.map(function() {
             return $(this).data('transaction-id'); // Assuming each row has a data attribute for the transaction ID
