--- a/ledger/templates/api/tables/transactions-table-new.html
+++ b/ledger/templates/api/tables/transactions-table-new.html
@@ -19,6 +19,7 @@
                         class="clickable-row{% if forloop.counter0 == index and not no_highlight %} table-active{% endif %}"
                         hx-get="{{ row_url }}form/{{ transaction.id }}/?row_index={{ forloop.counter0 }}"
                         hx-target="#form-div"
+                        data-transaction-id="{{ transaction.id }}"
                     >
                         <td>{{ transaction.date }}</td>
                         <td>{{ transaction.account }}</td>
@@ -33,4 +34,3 @@
         </div>
     </div>
 </div>
-{% include "api/components/clickable-row-script.html" %}
