--- a/ledger/templates/api/views/journal-entry-view.html
+++ b/ledger/templates/api/views/journal-entry-view.html
@@ -5,5 +5,6 @@
     <div id="table-and-form">
         {{ table_and_form }}
     </div>
+    {% include 'api/components/clickable-row-script.html' %}
 
 
