Final touches on linking view

--- a/ledger/templates/api/content/transactions-link-content.html
+++ b/ledger/templates/api/content/transactions-link-content.html
@@ -1,5 +1,5 @@
 {{ table }}
-<div id="form-div">
+<div id="link-form">
     {{ link_form }}
 </div>
 {% include "api/components/two-row-select-script.html" %}
