--- a/ledger/templates/api/entry_forms/journal-entry-item-form.html
+++ b/ledger/templates/api/entry_forms/journal-entry-item-form.html
@@ -60,7 +60,11 @@
                             class="form-control {% if form.amount.errors %}is-invalid{% endif %}"
                             name="{{ form.amount.html_name }}"
                             id="{{ form.amount.auto_id }}"
-                            value="{% if form.amount.value == 0 %}0.00{% else %}{{ form.amount.value|floatformat:2|intcomma }}{% endif %}"
+                            {% if form_errors %}
+                            value="{{ form.amount.value }}"
+                            {% else %}
+                            value="{% if form.amount.value == 0 %}0.00{% elif form.amount.value %}{{ form.amount.value|stringformat:'f'|floatformat:2|intcomma }}{% else %}0.00{% endif %}"
+                            {% endif %}
                             tabindex="{{ forloop.counter|multiply:4|add:2 }}"
                         >
                         <div class="invalid-feedback">
@@ -87,7 +91,7 @@
                             list="debitAccountOptions"
                             name="{{ form.account.html_name }}"
                             id="{{ form.account.auto_id }}"
-                            tabindex="{{ forloop.counter|multiply:4|add:1 }}"
+                            tabindex="{{ forloop.counter|multiply:4|add:3 }}"
                             value="{% if form.account_name %}{{ form.account_name }}{% elif form.account.value %}{{ form.account.value }}{% endif %}"
                             {% if autofocus_debit %}autofocus{% endif %}
                             >
@@ -109,7 +113,11 @@
                             class="form-control {% if form.amount.errors %}is-invalid{% endif %}"
                             name="{{ form.amount.html_name }}"
                             id="{{ form.amount.auto_id }}"
-                            value="{% if form.amount.value == 0 %}0.00{% else %}{{ form.amount.value|floatformat:2|intcomma }}{% endif %}"
+                            {% if form_errors %}
+                            value="{{ form.amount.value }}"
+                            {% else %}
+                            value="{% if form.amount.value == 0 %}0.00{% elif form.amount.value %}{{ form.amount.value|stringformat:'f'|floatformat:2|intcomma }}{% else %}0.00{% endif %}"
+                            {% endif %}
                             tabindex="{{ forloop.counter|multiply:4|add:4 }}"
                         >
                         <div class="invalid-feedback">
