--- a/ledger/templates/api/tables/amortization-table.html
+++ b/ledger/templates/api/tables/amortization-table.html
@@ -31,3 +31,7 @@
         </div>
     </div>
 </div>
+
+{% block extra_js %}
+{% include "api/components/clickable-row-script.html" %}
+{% endblock %}
