--- a/ledger/templates/api/tables/transactions-table-new.html
+++ b/ledger/templates/api/tables/transactions-table-new.html
@@ -34,3 +34,7 @@
         </div>
     </div>
 </div>
+
+{% block extra_js %}
+{% include "api/components/clickable-row-script.html" %}
+{% endblock %}
