--- a/ledger/templates/api/tables/unattached-prepaids.html
+++ b/ledger/templates/api/tables/unattached-prepaids.html
@@ -25,3 +25,7 @@
         </tbody>
     </table>
 </div>
+
+{% block extra_js %}
+{% include "api/components/clickable-row-script.html" %}
+{% endblock %}
