Reviewed on_delete methods

--- a/ledger/templates/api/entry_forms/transaction-form.html
+++ b/ledger/templates/api/entry_forms/transaction-form.html
@@ -65,7 +65,10 @@
             <!-- Submit Button -->
             <div class="form-row">
                 <div class="col-auto">
-                    <button type="submit" class="btn btn-primary mb-2">Save</button>
+                    <button type="submit" name="action" class="btn btn-primary mb-2">Save</button>
+                </div>
+                <div class="col-auto">
+                    <button type="submit" name="action" value="delete" class="btn btn-danger mb-2">Delete</button>
                 </div>
             </div>
         </form>
