--- a/ledger/templates/api/components/nav.html
+++ b/ledger/templates/api/components/nav.html
@@ -33,6 +33,9 @@
                 <li class="nav-item {% if request.resolver_match.url_name == 'balance-sheet' %}active{% endif %}">
                     <a class="nav-link" href="{% url 'balance-sheet' %}" hx-get="{% url 'balance-sheet' %}" hx-target="#container">Balance Sheet</a>
                 </li>
+                <li class="nav-item {% if request.resolver_match.url_name == 'cash-flow' %}active{% endif %}">
+                    <a class="nav-link" href="{% url 'cash-flow' %}" hx-get="{% url 'cash-flow' %}" hx-target="#container">Cash Flow</a>
+                </li>
             </ul>
         </div>
     </div>
