--- a/ledger/templates/api/views/cash-flow-statement.html
+++ b/ledger/templates/api/views/cash-flow-statement.html
@@ -2,6 +2,11 @@
 <h2>Cash Flow Statement</h2>
 <div class="row">
     <div class="col">
+        {{ filter_form }}
+    </div>
+</div>
+<div class="row">
+    <div class="col">
         <h4>Net: ${{ net_cash_flow|intcomma }}</h4>
     </div>
 </div>
