--- a/ledger/templates/api/views/balance-sheet.html
+++ b/ledger/templates/api/views/balance-sheet.html
@@ -1,16 +1,13 @@
 {% load humanize %}
-<div class="row">
-    <div class="col">
-        {{ filter_form }}
-    </div>
-</div>
+<h2>Balance Sheet</h2>
+
 <div class="row">
     <div class="col-md-4">
-        <h4>Income</h4>
-        ${{ total_income|intcomma }}
+        <h4>Assets</h4>
+        ${{ total_assets|intcomma }}
         <table class="table table-hover table-sm">
             <tbody>
-                {% for balance in income_balances %}
+                {% for balance in assets_balances %}
                 <tr>
                     <td>{{ balance.account }}</td>
                     <td>${{ balance.amount|intcomma }}</td>
@@ -21,11 +18,11 @@
     </div>
 
     <div class="col-md-4">
-        <h4>Expenses</h4>
-        ${{ total_expense|intcomma }}
+        <h4>Liabilities</h4>
+        ${{ total_liabilities|intcomma }}
         <table class="table table-hover table-sm">
             <tbody>
-                {% for balance in expense_balances %}
+                {% for balance in liabilities_balances %}
                 <tr>
                     <td>{{ balance.account }}</td>
                     <td>${{ balance.amount|intcomma }}</td>
@@ -36,7 +33,17 @@
     </div>
 
     <div class="col-md-4">
-        <h4>Net Income</h4>
-        ${{ net_income|intcomma }}
+        <h4>Equity</h4>
+        ${{ total_equity|intcomma }}
+        <table class="table table-hover table-sm">
+            <tbody>
+                {% for balance in equity_balances %}
+                <tr>
+                    <td>{{ balance.account }}</td>
+                    <td>${{ balance.amount|intcomma }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 </div>
