--- a/ledger/templates/api/content/balance-sheet-content.html
+++ b/ledger/templates/api/content/balance-sheet-content.html
@@ -1,6 +1,9 @@
 {% load humanize %}
-<h2>Balance Sheet</h2>
-
+<div class="row">
+    <div class="col">
+        {{ filter_form }}
+    </div>
+</div>
 <div class="row">
     <div class="col-md-4">
         <h4>Assets</h4>
