--- a/ledger/templates/api/content/cash-flow-content.html
+++ b/ledger/templates/api/content/cash-flow-content.html
@@ -1,6 +1,11 @@
 {% load humanize %}
 <div class="row">
     <div class="col">
+        {{ filter_form }}
+    </div>
+</div>
+<div class="row">
+    <div class="col">
         <h4>Net: ${{ net_cash_flow|intcomma }}</h4>
     </div>
 </div>
@@ -36,7 +41,7 @@
     </div>
 
     <div class="col-md-4">
-        <h4>Equity</h4>
+        <h4>Cash from Investing</h4>
         ${{ cash_from_investing|intcomma }}
         <table class="table table-hover table-sm">
             <tbody>
