--- a/ledger/templates/api/content/balance-sheet-content.html
+++ b/ledger/templates/api/content/balance-sheet-content.html
@@ -6,47 +6,53 @@
 </div>
 <div class="row">
     <div class="col-md-4">
-        <h4>Assets</h4>
-        ${{ total_assets|intcomma }}
-        <table class="table table-hover table-sm">
-            <tbody>
-                {% for balance in assets_balances %}
-                <tr>
-                    <td>{{ balance.account }}</td>
-                    <td>${{ balance.amount|intcomma }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <h4>Assets: ${{ summary.asset.total|intcomma }}</h4>
+        {% for account in summary.asset.balances %}
+            <h6>{{ account.name }}: ${{ account.total|intcomma }}</h6>
+            <table class="table table-hover table-sm">
+                <tbody>
+                    {% for balance in account.balances %}
+                    <tr>
+                        <td>{{ balance.account }}</td>
+                        <td>${{ balance.amount|floatformat:"0"|intcomma }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        {% endfor %}
     </div>
 
     <div class="col-md-4">
-        <h4>Liabilities</h4>
-        ${{ total_liabilities|intcomma }}
-        <table class="table table-hover table-sm">
-            <tbody>
-                {% for balance in liabilities_balances %}
-                <tr>
-                    <td>{{ balance.account }}</td>
-                    <td>${{ balance.amount|intcomma }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <h4>Liabilities: ${{ summary.liability.total|intcomma }}</h4>
+        {% for account in summary.liability.balances %}
+            <h6>{{ account.name }}: ${{ account.total|intcomma }}</h6>
+            <table class="table table-hover table-sm">
+                <tbody>
+                    {% for balance in account.balances %}
+                    <tr>
+                        <td>{{ balance.account }}</td>
+                        <td>${{ balance.amount|floatformat:"0"|intcomma }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        {% endfor %}
     </div>
 
     <div class="col-md-4">
-        <h4>Equity</h4>
-        ${{ total_equity|intcomma }}
-        <table class="table table-hover table-sm">
-            <tbody>
-                {% for balance in equity_balances %}
-                <tr>
-                    <td>{{ balance.account }}</td>
-                    <td>${{ balance.amount|intcomma }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <h4>Equity: ${{ summary.equity.total|intcomma }}</h4>
+        {% for account in summary.equity.balances %}
+            <h6>{{ account.name }}: ${{ account.total|intcomma }}</h6>
+            <table class="table table-hover table-sm">
+                <tbody>
+                    {% for balance in account.balances %}
+                    <tr>
+                        <td>{{ balance.account }}</td>
+                        <td>${{ balance.amount|floatformat:"0"|intcomma }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        {% endfor %}
     </div>
 </div>
