--- a/ledger/templates/api/content/balance-sheet-content.html
+++ b/ledger/templates/api/content/balance-sheet-content.html
@@ -6,9 +6,9 @@
 </div>
 <div class="row">
     <div class="col-md-4">
-        <h4>Assets: ${{ summary.asset.total|intcomma }}</h4>
+        <h4>Assets: ${{ summary.asset.total|floatformat:"0"|intcomma }}</h4>
         {% for account in summary.asset.balances %}
-            <h6>{{ account.name }}: ${{ account.total|intcomma }}</h6>
+            <h6>{{ account.name }}: ${{ account.total|floatformat:"0"|intcomma }}</h6>
             <table class="table table-hover table-sm">
                 <tbody>
                     {% for balance in account.balances %}
@@ -23,9 +23,9 @@
     </div>
 
     <div class="col-md-4">
-        <h4>Liabilities: ${{ summary.liability.total|intcomma }}</h4>
+        <h4>Liabilities: ${{ summary.liability.total|floatformat:"0"|intcomma }}</h4>
         {% for account in summary.liability.balances %}
-            <h6>{{ account.name }}: ${{ account.total|intcomma }}</h6>
+            <h6>{{ account.name }}: ${{ account.total|floatformat:"0"|intcomma }}</h6>
             <table class="table table-hover table-sm">
                 <tbody>
                     {% for balance in account.balances %}
@@ -40,9 +40,9 @@
     </div>
 
     <div class="col-md-4">
-        <h4>Equity: ${{ summary.equity.total|intcomma }}</h4>
+        <h4>Equity: ${{ summary.equity.total|floatformat:"0"|intcomma }}</h4>
         {% for account in summary.equity.balances %}
-            <h6>{{ account.name }}: ${{ account.total|intcomma }}</h6>
+            <h6>{{ account.name }}: ${{ account.total|floatformat:"0"|intcomma }}</h6>
             <table class="table table-hover table-sm">
                 <tbody>
                     {% for balance in account.balances %}
