--- a/ledger/templates/api/content/income-content.html
+++ b/ledger/templates/api/content/income-content.html
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-md-4">
         <h4>Income</h4>
-        ${{ total_income|intcomma }}
+        ${{ total_income|floatformat:"0"|intcomma }}
         <table class="table table-hover table-sm">
             <tbody>
                 {% for balance in income_balances %}
@@ -22,7 +22,7 @@
 
     <div class="col-md-4">
         <h4>Expenses</h4>
-        ${{ total_expense|intcomma }}
+        ${{ total_expense|floatformat:"0"|intcomma }}
         <table class="table table-hover table-sm">
             <tbody>
                 {% for balance in expense_balances %}
@@ -37,7 +37,7 @@
 
     <div class="col-md-4">
         <h4>Net Income</h4>
-        ${{ net_income|intcomma }}
+        ${{ net_income|floatformat:"0"|intcomma }}
         <table class="table table-hover table-sm">
             <tbody>
                 <tr>
