--- a/ledger/templates/api/content/balance-sheet-content.html
+++ b/ledger/templates/api/content/balance-sheet-content.html
@@ -13,8 +13,8 @@
                 <tbody>
                     {% for balance in account.balances %}
                     <tr>
-                        <td>{{ balance.account }}</td>
-                        <td>${{ balance.amount|floatformat:"0"|intcomma }}</td>
+                        <td class="col-8">{{ balance.account }}</td>
+                        <td class="col-4">${{ balance.amount|floatformat:"0"|intcomma }}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -30,8 +30,8 @@
                 <tbody>
                     {% for balance in account.balances %}
                     <tr>
-                        <td>{{ balance.account }}</td>
-                        <td>${{ balance.amount|floatformat:"0"|intcomma }}</td>
+                        <td class="col-8">{{ balance.account }}</td>
+                        <td class="col-4">${{ balance.amount|floatformat:"0"|intcomma }}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -47,8 +47,8 @@
                 <tbody>
                     {% for balance in account.balances %}
                     <tr>
-                        <td>{{ balance.account }}</td>
-                        <td>${{ balance.amount|floatformat:"0"|intcomma }}</td>
+                        <td class="col-8">{{ balance.account }}</td>
+                        <td class="col-4">${{ balance.amount|floatformat:"0"|intcomma }}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
