--- a/ledger/templates/api/content/income-content.html
+++ b/ledger/templates/api/content/income-content.html
@@ -12,8 +12,8 @@
             <tbody>
                 {% for balance in income_balances %}
                 <tr>
-                    <td>{{ balance.account }}</td>
-                    <td>${{ balance.amount|floatformat:"0"|intcomma }}</td>
+                    <td class="col-8">{{ balance.account }}</td>
+                    <td class="col-4">${{ balance.amount|floatformat:"0"|intcomma }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -27,8 +27,8 @@
             <tbody>
                 {% for balance in expense_balances %}
                 <tr>
-                    <td>{{ balance.account }}</td>
-                    <td>${{ balance.amount|floatformat:"0"|intcomma }}</td>
+                    <td class="col-8">{{ balance.account }}</td>
+                    <td class="col-4">${{ balance.amount|floatformat:"0"|intcomma }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -41,12 +41,12 @@
         <table class="table table-hover table-sm">
             <tbody>
                 <tr>
-                    <td>Realized Net Income</td>
-                    <td>${{ realized_net_income|floatformat:"0"|intcomma }}</td>
+                    <td class="col-8">Realized Net Income</td>
+                    <td class="col-4">${{ realized_net_income|floatformat:"0"|intcomma }}</td>
                 </tr>
                 <tr>
-                    <td>Unrealized Income</td>
-                    <td>${{ unrealized_income|floatformat:"0"|intcomma }}</td>
+                    <td class="col-8">Unrealized Income</td>
+                    <td class="col-4">${{ unrealized_income|floatformat:"0"|intcomma }}</td>
                 </tr>
             </tbody>
         </table>
