--- a/ledger/templates/api/content/cash-flow-content.html
+++ b/ledger/templates/api/content/cash-flow-content.html
@@ -11,10 +11,12 @@
 </div>
 <div class="row">
     <div class="col-md-4">
-        <h4>Cash from Operations</h4>
-        ${{ cash_from_operations|floatformat:"0"|intcomma }}
         <table class="table table-hover table-sm">
             <tbody>
+                <tr>
+                    <td class="col-8"><strong>Cash from Operations</strong></td>
+                    <td class="col-4"><strong>${{ cash_from_operations|floatformat:"0"|intcomma }}</strong></td>
+                </tr>
                 {% for balance in operations_flows %}
                 <tr>
                     <td class="col-8">{{ balance.account }}</td>
@@ -26,10 +28,12 @@
     </div>
 
     <div class="col-md-4">
-        <h4>Cash from Financing</h4>
-        ${{ cash_from_financing|floatformat:"0"|intcomma }}
         <table class="table table-hover table-sm">
             <tbody>
+                <tr>
+                    <td class="col-8"><strong>Cash from Financing</strong></td>
+                    <td class="col-4"><strong>${{ cash_from_financing|floatformat:"0"|intcomma }}</strong></td>
+                </tr>
                 {% for balance in financing_flows %}
                 <tr>
                     <td class="col-8">{{ balance.account }}</td>
@@ -41,10 +45,12 @@
     </div>
 
     <div class="col-md-4">
-        <h4>Cash from Investing</h4>
-        ${{ cash_from_investing|floatformat:"0"|intcomma }}
         <table class="table table-hover table-sm">
             <tbody>
+                <tr>
+                    <td class="col-8"><strong>Cash from Investing</strong></td>
+                    <td class="col-4"><strong>${{ cash_from_investing|floatformat:"0"|intcomma }}</strong></td>
+                </tr>
                 {% for balance in investing_flows %}
                 <tr>
                     <td class="col-8">{{ balance.account }}</td>
